@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2013 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.util.xml;
 
 import com.intellij.codeInspection.InspectionManager;
@@ -25,13 +11,9 @@ import com.intellij.psi.xml.XmlTag;
 import com.intellij.util.xml.highlighting.*;
 import com.intellij.util.xml.impl.DomTestCase;
 
-import java.util.Arrays;
+import java.util.List;
 
-/**
- * @author peter
- */
 public class DomAnnotationsTest extends DomTestCase {
-
   @Override
   protected <T extends DomElement> T createElement(final String xml, final Class<T> aClass) {
     final String name = "a.xml";
@@ -45,12 +27,12 @@ public class DomAnnotationsTest extends DomTestCase {
   }
 
   public void testResolveProblemsAreReportedOnlyOnce() {
-    final MyElement myElement = createElement("<a><my-class>abc</my-class></a>", MyElement.class);
+    MyElement myElement = createElement("<a><my-class>abc</my-class></a>", MyElement.class);
     
-    new MockDomInspection(MyElement.class).checkFile(DomUtil.getFile(myElement), InspectionManager.getInstance(getProject()), true);
-    final DomElementsProblemsHolder holder = DomElementAnnotationsManager.getInstance(getProject()).getProblemHolder(myElement);
+    new MockDomInspection<>(MyElement.class).checkFile(DomUtil.getFile(myElement), InspectionManager.getInstance(getProject()), true);
+    DomElementsProblemsHolder holder = DomElementAnnotationsManager.getInstance(getProject()).getProblemHolder(myElement);
 
-    final DomElement element = myElement.getMyClass();
+    DomElement element = myElement.getMyClass();
     assertEquals(0, holder.getProblems(myElement).size());
     assertEquals(0, holder.getProblems(myElement).size());
     assertEquals(1, holder.getProblems(element).size());
@@ -60,18 +42,17 @@ public class DomAnnotationsTest extends DomTestCase {
   }
 
   public void testMinSeverity() {
-    final MyElement element = createElement("<a/>", MyElement.class);
-    final DomElementsProblemsHolderImpl holder = new DomElementsProblemsHolderImpl(DomUtil.getFileElement(element));
-    final DomElementProblemDescriptorImpl error = new DomElementProblemDescriptorImpl(element, "abc", HighlightSeverity.ERROR);
-    final DomElementProblemDescriptorImpl warning = new DomElementProblemDescriptorImpl(element, "abc", HighlightSeverity.WARNING);
-    holder.addProblem(error, MockDomInspection.class);
-    holder.addProblem(warning, MockDomInspection.class);
-    assertEquals(Arrays.asList(error), holder.getProblems(element, true, true, HighlightSeverity.ERROR));
-    assertEquals(Arrays.asList(error, warning), holder.getProblems(element, true, true, HighlightSeverity.WARNING));
+    MyElement element = createElement("<a/>", MyElement.class);
+    DomElementsProblemsHolderImpl holder = new DomElementsProblemsHolderImpl(DomUtil.getFileElement(element));
+    DomElementProblemDescriptorImpl error = new DomElementProblemDescriptorImpl(element, "abc", HighlightSeverity.ERROR);
+    DomElementProblemDescriptorImpl warning = new DomElementProblemDescriptorImpl(element, "abc", HighlightSeverity.WARNING);
+    holder.addProblem(error, MockDomInspection.getInspection());
+    holder.addProblem(warning, MockDomInspection.getInspection());
+    assertEquals(List.of(error), holder.getProblems(element, true, true, HighlightSeverity.ERROR));
+    assertEquals(List.of(error, warning), holder.getProblems(element, true, true, HighlightSeverity.WARNING));
   }
 
-  public interface MyElement extends DomElement{
+  public interface MyElement extends DomElement {
     GenericDomValue<PsiClass> getMyClass();
   }
-
 }
